[opennap 0.20]

opennap will now listen on port 8889 in addition to the client connection
port.  When a connection is made to port 8889 it will display some
information about the status of the server, similar the the stats command
in the napster protocol.  This is intended to be usesful for clients to
query various servers to see their stats without having to log into each
one.

added max_nick_length configuration variable which controls the maximum
length a nickname is allowed to be (default: 32).  It can be set to 0
to indicate no maximum.  The protocol itself doesn't care how long nicks
are, but this puts a cap for readability in clients.

added --with-fd-setsize configure option to allow select() based systems
with a small default value (such as 256 under BSDI) to compile with a higher
maximum for more connections.

added new configuration variable connection_hard_limit to specify the
maximum number of connections that the process will ever be able to support
(default: 1024).  Note that this is different from the max_connections
variable which controls how many connections are allowed at the given
moment.  The reason for this variable is that on some systems you are
not allowed to increase the hard limit of file descriptors for a process
unless you have root privileges.  If run as root, opennap consults
connection_hard_limit to set the hard limit before dropping root privileges.

as described above, opennap can now be run as root when more file
descriptors per process than default is required.  new variables `uid' and
`gid' were added to specify the user and group to run as after changing
the resouce limits.  By default, opennap will attempt to find the uid/gid
for `nobody/nobody' and run as such.

opennap has been ported to Windows 2000 thanks to Damian Hodgkiss.

MySQL is no longer used to store the file database.  A custom memory based
solution was used in order to speed up the searches.  This requires more
memory, but the load is very low when searching.