@@ -1,4 +1,5 @@
 drscholl@users.sourceforge.net
-"Damian Hodgkiss" <mian@thirty4.com> -- Win32 port
+"Damian Hodgkiss" <mian@thirty4.com>	-- Win32 port
 "Colten Edwards" <edwards@bitchx.dimension6.com>
-jones@users.sourceforge.net	-- Solaris port
+jones@users.sourceforge.net		-- Solaris port
+Brian Smith <dbsoft@technologist.com>	-- OS/2 port
